// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`with-pragma.yml - {"insertPragma":true} format 1`] = `
====================================options=====================================
insertPragma: true
parsers: ["yaml"]
                                                      printWidth: 80 (default) |
=====================================input======================================
# @prettier

    123

=====================================output=====================================
# @prettier

123

================================================================================
`;

exports[`without-pragma.yml - {"insertPragma":true} format 1`] = `
====================================options=====================================
insertPragma: true
parsers: ["yaml"]
                                                      printWidth: 80 (default) |
=====================================input======================================


    123

=====================================output=====================================
# @format

123

================================================================================
`;
